--- a/AttendanceApp/View/Base.lproj/Main.storyboard
+++ b/AttendanceApp/View/Base.lproj/Main.storyboard
@@ -168,7 +168,7 @@
                     <navigationItem key="navigationItem" title="Daily Report" id="Kiq-GJ-FZw">
                         <barButtonItem key="rightBarButtonItem" title="PDF" id="y85-cf-DzV">
                             <connections>
-                                <action selector="exportToPDF:" destination="n3B-hu-m25" id="Tpq-rV-VCd"/>
+                                <action selector="exportToPDF:" destination="n3B-hu-m25" id="qBd-Cu-sae"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -178,7 +178,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rZa-nV-d8z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1625" y="878"/>
+            <point key="canvasLocation" x="1590" y="1051"/>
         </scene>
         <!--Sign In-->
         <scene sceneID="BU8-l2-HVP">
