--- a/AttendanceApp/View/Base.lproj/Main.storyboard
+++ b/AttendanceApp/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1QL-ZI-j1L">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1QL-ZI-j1L">
     <device id="ipad12_9" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -228,6 +228,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="voc-cg-WuJ">
+                                <rect key="frame" x="61" y="906" width="150" height="73"/>
+                                <color key="backgroundColor" red="0.92549019610000005" green="0.4361943338" blue="0.4380558504" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="Irn-iF-WbA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="26"/>
+                                <state key="normal" title="Clear">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="ClearButtonPressed:" destination="0na-2W-2FE" eventType="touchUpInside" id="xYV-qH-MZv"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -235,9 +249,12 @@
                             <constraint firstItem="HAy-sJ-rcQ" firstAttribute="trailing" secondItem="fd7-Ob-OCW" secondAttribute="trailing" constant="50" id="6eH-dM-UyH"/>
                             <constraint firstItem="NB8-KO-NgE" firstAttribute="top" secondItem="HAy-sJ-rcQ" secondAttribute="top" constant="27" id="774-0s-MGY"/>
                             <constraint firstItem="fd7-Ob-OCW" firstAttribute="top" secondItem="FF4-bG-v9n" secondAttribute="bottom" constant="41" id="85Q-Cm-kIc"/>
+                            <constraint firstItem="voc-cg-WuJ" firstAttribute="leading" secondItem="HAy-sJ-rcQ" secondAttribute="leading" constant="61" id="Fg1-7I-qsT"/>
+                            <constraint firstItem="voc-cg-WuJ" firstAttribute="top" secondItem="FF4-bG-v9n" secondAttribute="bottom" constant="49" id="KM2-fi-4Vc"/>
                             <constraint firstItem="FF4-bG-v9n" firstAttribute="top" secondItem="HAy-sJ-rcQ" secondAttribute="top" constant="105" id="VIN-Oq-mYP"/>
                             <constraint firstItem="HAy-sJ-rcQ" firstAttribute="trailing" secondItem="FF4-bG-v9n" secondAttribute="trailing" constant="50" id="b2Y-WA-UIn"/>
                             <constraint firstItem="NB8-KO-NgE" firstAttribute="centerX" secondItem="f0d-9a-FPZ" secondAttribute="centerX" id="cKf-Wk-dP7"/>
+                            <constraint firstItem="HAy-sJ-rcQ" firstAttribute="bottom" secondItem="voc-cg-WuJ" secondAttribute="bottom" constant="45" id="lcl-hz-Osk"/>
                             <constraint firstItem="HAy-sJ-rcQ" firstAttribute="bottom" secondItem="fd7-Ob-OCW" secondAttribute="bottom" constant="45" id="ndG-f0-ZCm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="HAy-sJ-rcQ"/>
